Vaadin 23.1.10 (Websocket problem with 23.2.x), new demo