@@ -7,6 +7,7 @@ import java.nio.file.Paths;
 import java.util.Locale;
 
 import com.vaadin.flow.component.button.Button;
+import com.vaadin.flow.component.combobox.ComboBox;
 import com.vaadin.flow.component.html.Div;
 import com.vaadin.flow.component.splitlayout.SplitLayout;
 import com.vaadin.flow.router.Route;
@@ -15,8 +16,9 @@ import at.metainfo.color.Css3Color;
 import at.metainfo.enhanced.EnhancedTabs;
 import at.metainfo.utilities.IGuiUtilities;
 import at.metainfo.vaadin.components.demo.views.AceEditorView;
+import at.metainfo.vaadin.components.demo.views.CkEditorView;
 import at.metainfo.vaadin.components.demo.views.FilesystemView;
-import at.metainfo.vaadin.components.demo.views.TerminalView;
+import at.metainfo.vaadin.components.demo.views.ConsoleView;
 import at.metainfo.vaadin.components.demo.views.TextAreaView;
 
 @SuppressWarnings("serial")
@@ -28,9 +30,9 @@ public class MetainfoVaadinComponentsDemo extends Div implements IGuiUtilities {
 		setSizeFull();
 
 		// Build initial EnhancedTabs
-		EnhancedTabs editors = editors();
-		EnhancedTabs tree = tree(editors);
 		EnhancedTabs tools = tools();
+		EnhancedTabs editors = editors(tools);
+		EnhancedTabs tree = tree(editors, tools);
 
 		// Arrange the double split layout
 		SplitLayout horizontalSplit = hs(
@@ -57,7 +59,7 @@ public class MetainfoVaadinComponentsDemo extends Div implements IGuiUtilities {
 		});
 	}
 
-	private EnhancedTabs tree(EnhancedTabs editors) {
+	private EnhancedTabs tree(EnhancedTabs editors, EnhancedTabs tools) {
 		EnhancedTabs treeTabs = new EnhancedTabs();
 		treeTabs.setSizeFull();
 		treeTabs.setDraggable(true);
@@ -69,21 +71,22 @@ public class MetainfoVaadinComponentsDemo extends Div implements IGuiUtilities {
 		} catch (IOException e) {
 			root = Path.of(".");
 		}
-		treeTabs.addView(new FilesystemView(root, editors, false));
+		treeTabs.addView(new FilesystemView(root, editors, tools, false));
 
 		return treeTabs;
 	}
 
-	private EnhancedTabs editors() {
-		EnhancedTabs editorTabs = new EnhancedTabs();
-		editorTabs.setSizeFull();
-		editorTabs.setDraggable(true);
-		editorTabs.setGlobalTarget(true);
+	private EnhancedTabs editors(EnhancedTabs tools) {
+		EnhancedTabs editors = new EnhancedTabs();
+		editors.setSizeFull();
+		editors.setDraggable(true);
+		editors.setGlobalTarget(true);
 
-		editorTabs.addView(new AceEditorView(Path.of("info.txt")));
-		editorTabs.addView(new FilesystemView(Paths.get("src/main/java/at/metainfo/vaadin/components/demo"), editorTabs, true));
+		editors.addView(new AceEditorView(Path.of("metainfo.txt")));
+		editors.addView(new CkEditorView(Path.of("metainfo.html")));
+		editors.addView(new FilesystemView(Paths.get("src/main/java/at/metainfo/vaadin/components/demo"), editors, tools, true));
 
-		return editorTabs;
+		return editors;
 	}
 
 	private EnhancedTabs tools() {
@@ -91,14 +94,23 @@ public class MetainfoVaadinComponentsDemo extends Div implements IGuiUtilities {
 		toolTabs.setSizeFull();
 		toolTabs.setDraggable(true);
 		toolTabs.setGlobalTarget(true);
-		
+
+		ComboBox<Css3Color> selectNewTextArea = new ComboBox<>();
+		selectNewTextArea.addValueChangeListener(event -> {
+			toolTabs.selectTab(toolTabs.addViewTab(new TextAreaView(event.getValue(), Locale.forLanguageTag(Locale.getDefault().getLanguage()))));
+			selectNewTextArea.clear();
+		});
+		selectNewTextArea.setPlaceholder("Add Textarea");
+		selectNewTextArea.setItems(Css3Color.values());
+
 		toolTabs.addToToolbar(
-			new Button("Add Terminal", event -> toolTabs.addView(new TerminalView()))
+			new Button("Console", event -> toolTabs.addView(new ConsoleView())),
+			selectNewTextArea
 		);
 
 		toolTabs.addView(new TextAreaView(Css3Color.LavenderBlush, Locale.ENGLISH));
 		toolTabs.addView(new TextAreaView(Css3Color.DimGray, Locale.GERMAN));
-		toolTabs.addView(new TerminalView());
+		toolTabs.addView(new ConsoleView());
 
 		return toolTabs;
 	}
